--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <h2>Мои соц сети</h2>
     <ul>
-      <li><a href="https://vk.com/a.glazkov2000" target="_blank">VK</a></li>
+      <li><a href="https://vk.com/persona5ru" target="_blank">VK</a></li>
     </ul>
 
     <hr>
